# OpenCVFaceDetectionAndroid

./: README.md  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sty/opencv/facedetection/android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  CMakeLists.txt  CascadeDetectorAdapter.h  DetectionBasedTracker_jni.cpp  MyOpenCVHelper.cpp  MyOpenCVHelper.h  native-lib.cpp
app/src/main/java/com/sty/opencv/facedetection/android/: CameraHelper.java  MainActivity.java  MyOpenCVHelper.java
app/src/main/java/com/sty/opencv/facedetection/android/util/: PermissionUtils.java
app/src/main/java/org/opencv/samples/facedetect/: FdActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sty/opencv/facedetection/android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
